# pYsabelle

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst  modules.rst  pysabelle.client.rst  pysabelle.raw.rst  pysabelle.rst  pysabelle.server.rst  pysabelle.session.rst
src/pysabelle/: __init__.py
src/pysabelle/client/: __init__.py  client.py
src/pysabelle/raw/: __init__.py  commands.py  dispatcher.py  exceptions.py  protocol.py  transport.py  types.py
src/pysabelle/server/: __init__.py  _patterns.py  exceptions.py  models.py  server_process.py
src/pysabelle/session/: __init__.py  callbacks.py  exceptions.py  session.py
tests/: example1.py  example2.py
